Partial fix #8600: some wrong sized buttons while editing plugin settings

--- a/application/extensions/SettingsWidget/assets/settingswidget.css
+++ b/application/extensions/SettingsWidget/assets/settingswidget.css
@@ -7,7 +7,7 @@ div.row {
     box-sizing: border-box;
 }
 
-.settingswidget input, .settingswidget label{
+.settingswidget input[type^='button'], .settingswidget label{
     height: 30px;
     line-height: 30px;
     margin-top: 0px;
